--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     plan: starter
     region: oregon
     buildCommand: pip install -r requirements.txt
-    startCommand: streamlit run src/main.py
+    startCommand: streamlit run src/streamlit_app.py
     envVars:
       - key: OPENAI_API_KEY
         sync: false
